2003-04-22  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-callbacks.c (composer_get_message): Only add the
	Organization: header if it is non-empty. Fixes bug #41730.

2003-04-18  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-composer-prefs.c (spell_set_ui): Protect against a NULL
	strv result from parsing the language list string.

2003-04-17  Jeffrey Stedfast  <fejj@ximian.com>

	Fixes for bug #41142.

	* mail-search.c (dialog_response_cb): Handle a GTK_RESPONSE_CLOSE
	response.
	(mail_search_construct): Changed the Cancel button into a Close
	button.

2003-04-18  Rodney Dawes  <dobey@ximian.com>

	* Makefile.am:
	* folder-browser-ui.c:
	* mail-signature-editor.c:
	* message-browser.c:
	Use PREFIX instead of EVOLUTION_DATADIR for bonobo_ui_util_set_ui ().
	Fixes bug #21499.
	
2003-04-17  Not Zed  <NotZed@Ximian.com>

	* mail-signature-editor.c (menu_help): remove the help menu item
	handling, as the help menu is removed.  Clean up of #38927.

2003-04-16  Not Zed  <NotZed@Ximian.com>

	* importers/Makefile.am (%.server.in): Remove COMPONENTDIR and set
	BINDIR and VERSION instead.

	* (importers/GNOME_Evolution_Mail_Pine_Intelligent_Importer.server.in.in,
	importers/GNOME_Evolution_Mail_Mbox_Importer.server.in.in,
	importers/GNOME_Evolution_Mail_Outlook_Importer.server.in.in,
	importers/GNOME_Evolution_Mail_Netscape_Intelligent_Importer.server.in.in,
	importers/GNOME_Evolution_Mail_Elm_Intelligent_Importer.server.in.in:) :
	Convert the type back to exe, and point to the main evolution
	executable.  Fixes #41164.

2003-04-16  Jeremy Katz  <katzj@redhat.com>

	* evolution-mail.schemas: schema keys can't be directories (#41419)

2003-04-15  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-config-druid.c (config_wizard_set_page): Fixed a logic
	error that was the cause of bug #41389.

2003-04-15  Not Zed  <NotZed@Ximian.com>

	* For bug #41199.

	* subscribe-dialog.glade: New interface from Anna.  Setup the
	wigdet names and add a progress bar, and set the default opening