@@ -261,8 +261,11 @@ format_url(const char *internal_url)
 static send_info_t get_receive_type(const char *url)
 {
 	CamelProvider *provider;
+	CamelException ex;
 
-	provider = camel_session_get_provider (session, url, NULL);
+	camel_exception_init(&ex);
+	provider = camel_session_get_provider (session, url, &ex);
+	camel_exception_clear(&ex);
 	if (!provider)
 		return SEND_INVALID;
 	
